apps/kuma/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuma-uptime-kuma
  labels:
    app.kubernetes.io/name: uptime-kuma
    app.kubernetes.io/instance: kuma
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Uptime Kuma"
    gethomepage.dev/group: "Monitoring"
    gethomepage.dev/icon: "uptime-kuma"
    gethomepage.dev/href: "https://kuma.cyphers.app"
    gethomepage.dev/description: "Uptime Monitoring"
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: uptime-kuma
    app.kubernetes.io/instance: kuma
