apps/kuma/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kuma
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Uptime Kuma"
    gethomepage.dev/group: "Monitoring"
    gethomepage.dev/icon: "uptime-kuma"
    gethomepage.dev/description: "Uptime Monitoring"
    gethomepage.dev/href: "https://kuma.cyphers.app"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kuma.cyphers.app`)
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik-auth
          namespace: authentik
      services:
        - name: kuma-uptime-kuma
          namespace: kuma
          port: 3001
  tls:
    secretName: production-cyphers-app-tls
